--- a/myprofile.css
+++ b/myprofile.css
@@ -1,3 +1,12 @@
 .jumbotron {
   margin-bottom: 0px;
 }
+
+canvas {
+  position: absolute;
+  left:0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(82, 190, 204, 0.2);
+}
